Create standard layout for site in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-
+    <header>
+        <!--Inspiration for layout https://bscottnz.github.io/esketch/
+        Simple and easy to follow-->
+        <h1>Etch-A-Sketch</h1>
+    </header>
+    <main>
+        <!--<nav class="features"></nav>-->
+        <div class="grid-container"></div> <!--Lets get the grid to work first.-->
+    </main>
+    <footer>
+        <div class="credits"><a href="">Sean Dela Cruz</a></div>
+    </footer>
 </body>
 
 </html>
