Add github link to footer Add flexbox layout to body Remove padding margin and border

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <!--Inspiration for layout https://bscottnz.github.io/esketch/
+        <!--Inspiration for layout https://michalosman.github.io/etch-a-sketch/
         Simple and easy to follow-->
         <h1>Etch-A-Sketch</h1>
     </header>
@@ -21,7 +21,9 @@
         <div class="grid-container"></div> <!--Lets get the grid to work first.-->
     </main>
     <footer>
-        <div class="credits"><a href="">Sean Dela Cruz</a></div>
+        <div class="credits">
+            <a href="https://github.com/seanaelius/">Sean Dela Cruz</a>
+        </div>
     </footer>
 </body>
 
