--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <!--<nav class="features"></nav>-->
+        <button class="grid">Grid Number</button>
         <div class="grid-container"></div> <!--Lets get the grid to work first.-->
     </main>
     <footer>
