Implement grid button that prompts user for grid dimensions Fix bug that does not clear pre-existing grid

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main>
         <!--<nav class="features"></nav>-->
-        <button class="grid">Grid Number</button>
-        <div class="grid-container"></div> <!--Lets get the grid to work first.-->
+        <button class="number">Grid Number</button>
+        <div id="container"></div> <!--Lets get the grid to work first.-->
     </main>
     <footer>
         <div class="credits">
