Implement clear feature

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main>
         <!--<nav class="features"></nav>-->
         <button class="number">Grid Number</button>
+        <button class="clear">Clear the grid!</button>
         <div id="container"></div> <!--Lets get the grid to work first.-->
     </main>
     <footer>
