Update comments in script.js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <main>
         <!--<nav class="features"></nav>-->
+        <!--Need to incorporate eraser, progress, randomize buttons into nav and flex veritcally-->
         <button class="number">Grid Number</button>
         <button class="clear">Clear the grid!</button>
         <div id="container"></div> <!--Lets get the grid to work first.-->
