--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!--Need to incorporate eraser, progress, randomize buttons into nav and flex veritcally-->
         <button class="number">Grid Number</button>
         <button class="clear">Clear the grid!</button>
+        <input type = "color" id = "colorpicker" value="#FF0000">
         <div id="container"></div> <!--Lets get the grid to work first.-->
     </main>
     <footer>
