--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <button class="number">Grid Number</button>
         <button class="clear">Clear the grid!</button>
         <input type = "color" id = "colorpicker" value="#FF0000">
-        <div id="container"></div> <!--Lets get the grid to work first.-->
+        <button class="eraser">Eraser!</button>
+        <div id="container"></div>
     </main>
     <footer>
         <div class="credits">
