--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <h1>Etch-A-Sketch</h1>
     </header>
     <main>
-        <!--<nav class="features"></nav>-->
-        <!--Need to incorporate eraser, progress, randomize buttons into nav and flex veritcally-->
-        <button class="number">Grid Number</button>
-        <button class="clear">Clear the grid!</button>
-        <input type = "color" id = "colorpicker" value="#FF0000">
-        <button class="eraser">Eraser</button>
-        <button class="randomize">Randomize</button>
+        <nav class="features">
+            <button class="number">Grid Number</button>
+            <button class="clear">Clear the grid!</button>
+            <input type = "color" id = "colorpicker" value="#FF0000">
+            <button class="eraser">Eraser</button>
+            <button class="randomize">Randomize</button>
+            <button class="progressive">Progressive Darkening</button>
+         </nav> 
         <div id="container"></div>
     </main>
     <footer>
