Finishh CSS styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Etch-A-Sketch</h1>
     </header>
     <main>
+        <div id="container"></div>
         <nav class="features">
             <button class="number">Grid Number</button>
             <button class="clear">Clear the grid!</button>
@@ -25,11 +26,11 @@
             <button class="randomize">Randomize</button>
             <button class="progressive">Progressive Darkening</button>
          </nav> 
-        <div id="container"></div>
+        
     </main>
     <footer>
         <div class="credits">
-            <a href="https://github.com/seanaelius/">Sean Dela Cruz</a>
+            <a href="https://github.com/seanaelius/"> Copyright © seanaelius</a>
         </div>
     </footer>
 </body>
