--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div id="container"></div>
         <nav class="features">
             <button class="number">Grid Number</button>
-            <button class="clear">Clear the grid!</button>
-            <input type = "color" id = "colorpicker" value="#FF0000">
+            <button class="clear">Clear the grid</button>
+            <input type="color" id="colorpicker" value="#FF0000">
             <button class="eraser">Eraser</button>
             <button class="randomize">Randomize</button>
             <button class="progressive">Progressive Darkening</button>
-         </nav> 
-        
+        </nav>
+
     </main>
     <footer>
         <div class="credits">
