Change clear the grid to clear grid

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="container"></div>
         <nav class="features">
             <button class="number">Grid Number</button>
-            <button class="clear">Clear the grid</button>
+            <button class="clear">Clear grid</button>
             <input type="color" id="colorpicker" value="#FF0000">
             <button class="eraser">Eraser</button>
             <button class="randomize">Randomize</button>
